2005-03-08  Peter Seibel  <peter@gigamonkeys.com>

	* doc/Makefile (clean): added clean and really_clean targets.
	(all): and added slime.pdf to all prerequisites.

	* swank-loader.lisp (*implementation-features*): Whoops. Forgot
	CLISP.
	(*architecture-features*): Added :x86-64 for SBCL on AMD64 (thanks
	Vincent Arkesteijn)

2005-03-07  Peter Seibel  <peter@gigamonkeys.com>

	* swank-loader.lisp (unique-directory-name): Replaced *lisp-name*
	variable with more sophisticated version that accounts for impl,
	impl version, os, and hardware architecture.

2005-03-07  Edi Weitz  <edi@agharta.de>

	* swank.lisp: Fixed parenthesis-balancing problem.

2005-03-06  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* slime.el (slime-easy-menu): Add menu item for
	slime-complete-form.

	* swank.lisp (format-arglist-for-echo-area): Use extra-keywords to
	enrich the list of keywords.
	(arglist-to-string): Remove extraneous whitespace.
	(keyword-arg, optional-arg): New structures.
	(decode-keyword-arg, decode-optional-arg): Return structure
	objects rather than multiple values.
	(encode-keyword-arg, encode-optional-arg, encode-arglist): New
	functions.
	(arglist): New slot key-p.
	(decode-arglist): Handle &whole, &environment.  Store more
	information on optional and keyword args, set arglist.key-p.
	(values-equal?): Removed.
	(print-decoded-arglist-as-template): If keyword is
	not a keyword symbol, quote it in the template.
	(extra-keywords): Return a secondary value (allow-other-keys).
	For make-instance, try to finalize the class if it is not
	finalized yet (fix for Allegro CL 6.2).  If class is not
	finalizable, use direct slots instead of slots and indicate that
	the keywords are not complete.
	(enrich-decoded-arglist-with-extra-keywords): New function, use
	the secondary value of extra-keywords.
	(arglist-for-insertion, complete-form): Use it here.
	(remove-keywords-alist): New variable.
	(remove-actual-args): When the keyword :test is provided, don't